--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${springframework.version}</version>
 		</dependency>
+		
+		<!-- Dependencias indirectas del API Servlet para la clase AppInitializer -->
+		<!-- JSP Dependency -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
