--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<java-version>1.8</java-version>
-		<springframework.version>5.0.7.RELEASE</springframework.version>
+		<springframework.version>5.1.0.RELEASE</springframework.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<log4j.version>2.11.0</log4j.version>
 	</properties>
@@ -22,7 +22,7 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${springframework.version}</version>
 		</dependency>
-		
+
 		<!-- Dependencias indirectas del API Servlet para la clase AppInitializer -->
 		<!-- JSP Dependency -->
 		<dependency>
@@ -32,6 +32,12 @@
 			<scope>provided</scope>
 		</dependency>
 		
+		<dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -58,9 +64,16 @@
 			<artifactId>jul-to-slf4j</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
-		
+
+		<!-- Tiles -->
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>3.0.8</version>
+		</dependency>
+
 	</dependencies>
-	
+
 	<build>
 		<finalName>spring-base-web-app</finalName>
 		<plugins>
