--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<springframework.version>5.1.0.RELEASE</springframework.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<log4j.version>2.11.0</log4j.version>
+		<tiles.version>3.0.8</tiles.version>
 	</properties>
 
 	<dependencies>
@@ -69,7 +70,7 @@
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-jsp</artifactId>
-			<version>3.0.8</version>
+			<version>${tiles.version}</version>
 		</dependency>
 
 	</dependencies>
