--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<properties>
 		<java-version>1.8</java-version>
 		<springframework.version>5.1.0.RELEASE</springframework.version>
+		<hibernate-version>5.4.1.Final</hibernate-version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<log4j.version>2.11.0</log4j.version>
 		<tiles.version>3.0.8</tiles.version>
@@ -87,12 +88,12 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.3.6.Final</version>
+			<version>${hibernate-version}</version>
 		</dependency>
 		<dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-envers</artifactId>
-            <version>4.3.6.Final</version>
+            <version>${hibernate-version}</version>
         </dependency>
         <dependency>
             <groupId>javax.transaction</groupId>
